ajustes cores e suavidade

--- a/index.html
+++ b/index.html
@@ -84,38 +84,35 @@
             <article class="educacao_1" data-animar="d" style="transition-delay: 0.2s;">
                 <h3 data-animar="c">Sobre mim</h3>
                 <p data-animar="e" style="transition-delay: 0.2s;">
-                    Me chamo Janpierry Santana, desenvolvedor web, estudante de Análise e Desenvolvimento de Sistemas e
-                    fundador de uma agência focada em presença digital estratégica a <a
-                        href="https://www.codelend.com.br" target="_blank">CodeLend.</a>
+                    Sou Janpierry Santana, desenvolvedor web, estudante de Análise e Desenvolvimento de Sistemas e
+                    fundador da <a href="https://www.codelend.com.br" target="_blank">CodeLend</a>, uma agência
+                    especializada em presença digital estratégica.
                 </p>
 
                 <p data-animar="e" style="transition-delay: 0.2s;">
-                    Minha trajetória começou no interior da Bahia, marcada por desafios familiares, perdas e superações
-                    que moldaram quem sou hoje. Ainda criança, perdi minha mãe de forma trágica e cresci enfrentando a
-                    dor, a rejeição e a solidão. Fui desacreditado por muitos, mas nunca deixei de acreditar que eu
-                    podia vencer.
+                    Ao longo da minha jornada profissional, enfrentei diversos desafios que me motivaram a buscar
+                    excelência e inovação em cada projeto. Acredito no poder da tecnologia como ferramenta de
+                    transformação e crescimento.
                 </p>
 
                 <p data-animar="e" style="transition-delay: 0.2s;">
-                    Aos 18 anos, me mudei sozinho para São Paulo com o objetivo de mudar minha vida. Passei por
-                    situações extremas, como humilhações e ameaças. Mesmo assim, continuei firme — e foi na tecnologia
-                    que encontrei meu caminho.
+                    Com dedicação e foco, venho construindo soluções digitais que geram valor real para pessoas,
+                    empresas e marcas. Cada projeto é tratado com seriedade, compromisso e atenção aos detalhes.
                 </p>
 
                 <p data-animar="e" style="transition-delay: 0.2s;">
-                    Hoje, sou pai e marido, quando entrego um projeto carrega um pedaço da minha verdade, porque sei o
-                    valor de uma oportunidade e o quanto um bom
-                    trabalho pode transformar vidas.
+                    Ao entregar um trabalho, levo comigo o compromisso de qualidade, estratégia e impacto. Sei o quanto
+                    uma oportunidade bem aproveitada pode fazer a diferença.
                 </p>
 
                 <p data-animar="e" style="transition-delay: 0.2s;">
-                    Se você tem um sonho, um projeto ou um negócio e precisa de presença digital com qualidade,
-                    estratégia e impacto — estou aqui pra te ajudar.
+                    Se você tem um sonho, um projeto ou um negócio e precisa de presença digital com qualidade e
+                    resultados — estou aqui para ajudar.
                 </p>
 
                 <p data-animar="e" style="transition-delay: 0.2s;">
-                    Porque eu sei o que é começar do zero. E é exatamente por isso que faço questão de entregar o meu
-                    melhor.
+                    Porque todo grande resultado começa com um passo bem dado. E é exatamente por isso que me dedico a
+                    entregar sempre o melhor.
                 </p>
 
             </article>
@@ -298,23 +295,32 @@
         particlesJS("stars", {
             "particles": {
                 "number": {
-                    "value": 200
+                    "value": 150,
+                    "density": {
+                        "enable": true,
+                        "value_area": 800
+                    }
                 },
                 "color": {
-                    "value": "#ffffff"
+                    "value": "#999999"
                 },
                 "shape": {
                     "type": "circle"
                 },
                 "opacity": {
-                    "value": 1
+                    "value": 0.4,
+                    "random": true,
+                    "anim": {
+                        "enable": false
+                    }
                 },
                 "size": {
-                    "value": 1
+                    "value": 1.5,
+                    "random": true
                 },
                 "move": {
                     "enable": true,
-                    "speed": 0.5,
+                    "speed": 0.3,
                     "direction": "none",
                     "out_mode": "out"
                 }
@@ -333,6 +339,7 @@
             "retina_detect": true
         });
     </script>
+
 </body>
 
 </html>
