blibiotecas habilidades adicionado

--- a/index.html
+++ b/index.html
@@ -150,6 +150,8 @@
                     <img src="img/git.png" alt="git" data-animar="b" style="transition-delay: 0.4s;">
                     <img src="img/github-skills.png" alt="github" data-animar="b" style="transition-delay: 0.5s;">
                     <img src="img/bootstrap.png" alt="bootstrap" data-animar="b" style="transition-delay: 0.6s;">
+                    <img src="img/tailwind.png" alt="tailwind" data-animar="b" style="transition-delay: 0.4s;">
+                    <img src="img/uiverse.png" alt="uiverse" data-animar="b" style="transition-delay: 0.2s;">
                     <img src="img/sass.png" alt="sass" data-animar="b" style="transition-delay: 0.7s;">
                     <img src="img/prompt.png" alt="prompt responsáveis" data-animar="b" style="transition-delay: 0.7s;">
                     <img src="img/figma.png" alt="figma" data-animar="b" style="transition-delay: 0.7s;">
@@ -195,10 +197,31 @@
                 </div>
             </div>
 
+            <div class="skill" data-animar="e">
+                <span>tailwind 55%</span>
+                <div class="barra">
+                    <div class="progresso tailwind" data-porcentagem="55%"></div>
+                </div>
+            </div>
+
+            <div class="skill" data-animar="e">
+                <span>uiverse 95%</span>
+                <div class="barra">
+                    <div class="progresso uiverse" data-porcentagem="95%"></div>
+                </div>
+            </div>
+
             <div class="skill">
                 <span>Figma 45%</span>
                 <div class="barra">
                     <div class="progresso figma" data-porcentagem="45%"></div>
+                </div>
+            </div>
+
+            <div class="skill">
+                <span>Git 75%</span>
+                <div class="barra">
+                    <div class="progresso git" data-porcentagem="75%"></div>
                 </div>
             </div>
 
