--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
                 <article class="redes_social">
                     <div class="social" data-animar="c" style="transition-delay: 0.4s;">
-                        <a href="https://www.instagram.com/janpyweb/" target="_blank"><img src="img/instagram.png"
+                        <a href="https://www.instagram.com/jan_santana011/" target="_blank"><img src="img/instagram.png"
                                 alt="instagram" /></a>
                     </div>
                     <div class="social" data-animar="c" style="transition-delay: 0.6s;">
@@ -61,7 +61,7 @@
                                 alt="facebook" /></a>
                     </div>
                     <div class="social" data-animar="c" style="transition-delay: 0.4s;">
-                        <a href="https://www.tiktok.com/@janpyweb" target="_blank"><img src="img/tik-tok.png"
+                        <a href="https://www.tiktok.com/@jansantana011" target="_blank"><img src="img/tik-tok.png"
                                 alt="tik-tok" /></a>
                     </div>
                     <div class="social" data-animar="c" style="transition-delay: 0.6s;">
@@ -273,13 +273,13 @@
                 </div>
 
                 <div class="fale_comigo">
-                    <a href="https://www.tiktok.com/@janpyweb" target="_blank">
+                    <a href="https://www.tiktok.com/@jansantana011" target="_blank">
                         <img src="img/tik-tok.png" alt="tiktok">
                     </a>
                 </div>
 
                 <div class="fale_comigo">
-                    <a href="https://www.instagram.com/janpyweb/" target="_blank">
+                    <a href="https://www.instagram.com/jan_santana011/" target="_blank">
                         <img src="img/instagram.png" alt="instagram">
                     </a>
                 </div>
