--- a/index.html
+++ b/index.html
@@ -329,6 +329,7 @@
 
 
     <footer id="contato">
+        <p id="frase-animada">💡 Transformo ideias em páginas animadas, modernas e responsivas.</p>
         &copy; @janpyweb. Todos os direitos reservados.
     </footer>
 
