teste correçao layout v3

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 
             <article class="container_projetos">
 
-                <article class="_projeto" data-animar="c">
+                <article class="_projeto game" data-animar="c">
                     <a href="https://janpy011.github.io/jogos/" target="_blank"><img src="img/jogos.PNG"
                             alt="Jogos"></a>
                     <small>Jogos</small>
