ajustes maxwidth e right

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
             </div>
 
             <div class="imagem_inicio" data-animar="d" style="transition-delay: 0.8s;">
-                <img src="img/minha-foto.jpg" alt="uma foto minha" />
-                <div class="saudacao">👋​</div>
+                <img src="img/minha-foto.jpg" alt="uma foto minha"/>
+                <div class="saudacao" data-animar="e">👋​</div>
             </div>
         </section>
 
