ajuste geral versal final v3

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
 
             <div class="imagem_inicio" data-animar="d" style="transition-delay: 0.8s;">
-                <img src="img/minha-foto.jpg" alt="uma foto minha"/>
+                <img src="img/minha-foto.jpg" alt="uma foto minha" />
                 <div class="saudacao" data-animar="e">👋​</div>
             </div>
         </section>
@@ -299,9 +299,10 @@
                     <small>Barbearia</small>
                     <p>Landing page feita com HTML, CSS e JavaScript.</p>
                     <div class="projeto_botoes">
-                        <a href="https://barbeariaestilo.vercel.app/" target="_blank" class="botao_projeto live">Live
-                            Project</a>
-                        <a href="https://github.com/janpy011/Barbearia" target="_blank" class="botao_projeto github">GitHub</a>
+                        <a href="https://barbeariaestilo.vercel.app/" target="_blank" class="botao_projeto live">Ver
+                            Projeto</a>
+                        <a href="https://github.com/janpy011/Barbearia" target="_blank"
+                            class="botao_projeto github">GitHub</a>
                     </div>
                 </article>
 
@@ -311,9 +312,10 @@
                     <small>Estúdio Tattoo</small>
                     <p>Landing page animada com carrossel feita com HTML, CSS, Javascript.</p>
                     <div class="projeto_botoes">
-                        <a href="https://fannytatto.vercel.app/" target="_blank" class="botao_projeto live">Live
-                            Project</a>
-                        <a href="https://github.com/janpy011/studioTattoo" target="_blank" class="botao_projeto github">GitHub</a>
+                        <a href="https://fannytatto.vercel.app/" target="_blank" class="botao_projeto live">Ver
+                            Projeto</a>
+                        <a href="https://github.com/janpy011/studioTattoo" target="_blank"
+                            class="botao_projeto github">GitHub</a>
                     </div>
                 </article>
 
@@ -323,9 +325,10 @@
                     <small>Salão</small>
                     <p>Landing page feita com HTML, SASS e JavaScript, animações suaves e responsiva.</p>
                     <div class="projeto_botoes">
-                        <a href="https://julianasouza.vercel.app/" target="_blank" class="botao_projeto live">Live
-                            Project</a>
-                        <a href="https://github.com/janpy011/salao" target="_blank" class="botao_projeto github">GitHub</a>
+                        <a href="https://julianasouza.vercel.app/" target="_blank" class="botao_projeto live">Ver
+                            Projeto</a>
+                        <a href="https://github.com/janpy011/salao" target="_blank"
+                            class="botao_projeto github">GitHub</a>
                     </div>
                 </article>
             </article>
@@ -386,7 +389,8 @@
 
 
     <footer id="contato">
-        <p id="frase-animada">💡 Transformo ideias em páginas animadas, modernas e responsivas.</p>
+        <p data-animar="b" style="animation-delay: 0.4s;">💡 Transformo ideias em páginas animadas, modernas e
+            responsivas.</p>
         &copy; @janpyweb. Todos os direitos reservados.
     </footer>
 
