footer copy atualizado v3

--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
     <footer id="contato">
         <p data-animar="b" style="animation-delay: 0.4s;">💡 Transformo ideias em páginas animadas, modernas e
             responsivas.</p>
-        &copy; @janpyweb. Todos os direitos reservados.
+        &copy; @jan_santana011. Todos os direitos reservados.
     </footer>
 
     <script src="script/script.js"></script>
