ajustes finais da v3

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Portfólio | Janpierry</title>
     <link rel="stylesheet" href="sass/estilo.css" />
     <link rel="shortcut icon" href="img/logo-ofc.ico" type="image/x-icon" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -300,7 +302,7 @@
                     <p>Landing page feita com HTML, CSS e JavaScript.</p>
                     <div class="projeto_botoes">
                         <a href="https://barbeariaestilo.vercel.app/" target="_blank" class="botao_projeto live">Ver
-                            Projeto</a>
+                        </a>
                         <a href="https://github.com/janpy011/Barbearia" target="_blank"
                             class="botao_projeto github">GitHub</a>
                     </div>
@@ -313,7 +315,7 @@
                     <p>Landing page animada com carrossel feita com HTML, CSS, Javascript.</p>
                     <div class="projeto_botoes">
                         <a href="https://fannytatto.vercel.app/" target="_blank" class="botao_projeto live">Ver
-                            Projeto</a>
+                        </a>
                         <a href="https://github.com/janpy011/studioTattoo" target="_blank"
                             class="botao_projeto github">GitHub</a>
                     </div>
@@ -326,7 +328,7 @@
                     <p>Landing page feita com HTML, SASS e JavaScript, animações suaves e responsiva.</p>
                     <div class="projeto_botoes">
                         <a href="https://julianasouza.vercel.app/" target="_blank" class="botao_projeto live">Ver
-                            Projeto</a>
+                        </a>
                         <a href="https://github.com/janpy011/salao" target="_blank"
                             class="botao_projeto github">GitHub</a>
                     </div>
@@ -389,9 +391,9 @@
 
 
     <footer id="contato">
-        <p data-animar="b" style="animation-delay: 0.4s;">💡 Transformo ideias em páginas animadas, modernas e
+        <p>💡 Transformo ideias em páginas animadas, modernas e
             responsivas.</p>
-        &copy; @jan_santana011. Todos os direitos reservados.
+        &copy; Janpierry Santana. Todos os direitos reservados.
     </footer>
 
     <script src="script/script.js"></script>
