adicionado mais projetos leves alteraçoes na escrita

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             </article>
 
             <article class="tecnologias" data-animar="e">
-                <p>Skills e Tecnologias</p>
+                <p>Tecnologias</p>
                 <article class="skills">
                     <img src="img/html.png" alt="html" data-animar="b" style="transition-delay: 0.1s;">
                     <img src="img/css.png" alt="css" data-animar="b" style="transition-delay: 0.2s;">
@@ -175,7 +175,7 @@
         </section>
 
         <section class="habilidades">
-            <h2 data-animar="b">Minhas Tecnologias</h2>
+            <h2 data-animar="b">Nivel de Tecnologias</h2>
 
             <div class="skill" data-animar="e" style="transition-delay: 0.2s;">
 
@@ -294,6 +294,45 @@
             <h2 class="projeto_titulo" data-animar="b">Meus projetos</h2>
 
             <article class="container_projetos">
+
+                <article class="_projeto" data-animar="c" style="transition-delay: 0.2s;">
+                    <a href="https://siteprototipo.vercel.app/" target="_blank"><img src="img/siteInstitucuinal.PNG"
+                            alt="site institucional"></a>
+                    <small>Site Institucional</small>
+                    <p>site feito com HTML, SASS e JavaScript.</p>
+                    <div class="projeto_botoes">
+                        <a href="https://siteprototipo.vercel.app/" target="_blank" class="botao_projeto live">Ver
+                        </a>
+                        <a href="https://github.com/janpy011/siteprototipo" target="_blank"
+                            class="botao_projeto github">GitHub</a>
+                    </div>
+                </article>
+
+                <article class="_projeto" data-animar="c" style="transition-delay: 0.2s;">
+                    <a href="http://estudio-pied.vercel.app" target="_blank"><img src="img/estuduideTatto.PNG"
+                            alt="prototipo"></a>
+                    <small>prototípo estudio Tatto</small>
+                    <p>Landing page feita com HTML, SASS e JavaScript.</p>
+                    <div class="projeto_botoes">
+                        <a href="http://estudio-pied.vercel.app" target="_blank" class="botao_projeto live">Ver
+                        </a>
+                        <a href="https://github.com/janpy011/estudio" target="_blank"
+                            class="botao_projeto github">GitHub</a>
+                    </div>
+                </article>
+
+                <article class="_projeto" data-animar="c" style="transition-delay: 0.2s;">
+                    <a href="https://www.codelend.com.br/" target="_blank"><img src="img/codelend.PNG"
+                            alt="prototipo"></a>
+                    <small>Site da âgencia</small>
+                    <p>Site feito com HTML, SASS e JavaScript.</p>
+                    <div class="projeto_botoes">
+                        <a href="https://www.codelend.com.br/" target="_blank" class="botao_projeto live">Ver
+                        </a>
+                        <a href="https://github.com/janpy011/codelend" target="_blank"
+                            class="botao_projeto github">GitHub</a>
+                    </div>
+                </article>
 
                 <article class="_projeto" data-animar="c" style="transition-delay: 0.2s;">
                     <a href="https://barbeariaestilo.vercel.app/" target="_blank"><img src="img/barbearia.PNG"
