atualizacao-cv-informacoes

--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
         </section>
 
         <section class="sobre_mim" id="sobre">
-            <article class="educacao_1" data-animar="d" style="transition-delay: 0.2s;">
-                <h3 data-animar="c">Sobre mim</h3>
-                <p data-animar="e" style="transition-delay: 0.2s;">
-                    Sou Janpierry Santana, desenvolvedor web, estudante de Análise e Desenvolvimento de Sistemas e
-                    fundador da <a href="https://www.codelend.com.br" target="_blank">CodeLend</a>, uma agência
+            <article class="educacao_1" data-animar="b" style="transition-delay: 0.2s;">
+                <h3 data-animar="b">Sobre mim</h3>
+                <p data-animar="e" style="transition-delay: 0.4s;">
+                    Me chamo Janpierry Santana atuo como desenvolvedor Front-end e
+                    CEO da <a href="https://www.codelend.com.br" target="_blank">CodeLend</a>, uma agência
                     especializada em presença digital estratégica.
                 </p>
 
@@ -127,31 +127,25 @@
             </article>
 
             <article class="educacao_2">
-                <article class="educacao_box" data-animar="b" style="transition-delay: 0.5s;">
-                    <h3>Educação</h3>
-                    <ul>
-                        <li>• Ensino médio completo</li>
-                        <li>• Análise e Desenvolvimento de Sistemas (Cursando - Faculdade VINCINT).</li>
-                    </ul>
-                </article>
 
                 <article class="educacao_box" data-animar="b" style="transition-delay: 0.6s;">
                     <h3>Certificados</h3>
                     <ul>
-                        <li>• Certificado em Frontend Developer: HTML, CSS, JavaScript (Serliv - 112 horas).</li>
-                        <li>• Certificado em Programador Web (IF - 200 horas).</li>
-                        <li>• Certificado em Prompt Responsáveis (Open Academy - 8 horas).</li>
+                        <li>• Frontend Developer.</li>
+                        <li>• Programador Web.</li>
+                        <li>• Prompt Responsáveis.</li>
+                        <li>• Inteligencia Artificial.</li>
                     </ul>
                 </article>
 
                 <article class="educacao_box" data-animar="b" style="transition-delay: 0.6s;">
-                    <h3>Estudando</h3>
+                    <h3>Adaptando-se</h3>
                     <ul>
-                        <li>• Cursando Figma (Udemy)</li>
-                        <li>• Cursando React (Udemy)</li>
-                        <li>• Cursando TypeScript (Udemy)</li>
-                        <li>• Cursando Node.js (Udemy)</li>
-                        <li>• Cursando SQL (Udemy)</li>
+                        <li>• React </li>
+                        <li>• TypeScript </li>
+                        <li>• Node.js </li>
+                        <li>• SQL </li>
+                        <li>• AWS </li>
                     </ul>
                 </article>
             </article>
@@ -381,7 +375,7 @@
                 <p>Anos de experiência</p>
             </div>
             <div class="metrica">
-                <span class="numero" data-alvo="15" data-animar="b">0</span><span class="mais">+</span>
+                <span class="numero" data-alvo="30" data-animar="b">0</span><span class="mais">+</span>
                 <p>Projetos finalizados</p>
             </div>
         </section>
@@ -486,7 +480,6 @@
             "retina_detect": true
         });
     </script>
-
 </body>
 
 </html>
