ajuste-cv-atualizado

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <nav class="menu_nav" id="menu_nav">
                 <ul>
                     <li class="curriculo">
-                        <a href="Curriculo_Janpierry_Santana_Com_Portfolio (1).pdf" class="botao-download"
+                        <a href="Curriculo_Janpierry_Santana_2025.pdf" class="botao-download"
                             data-animar="b" style="transition-delay: 0.8s;" download>
                             Baixar CV
                         </a>
